testimonials fixed, line spacing fixing

--- a/project/assets/css/main.less
+++ b/project/assets/css/main.less
@@ -6,6 +6,7 @@ html, body {
 
 h4 { 
 	font-family: CandaraBold, sans serif; 
+	color: #595550;
 }
 h1, h2, h3, h5, h6 { 
 	font-family: CandaraRegular, sans serif; 
@@ -80,7 +81,6 @@ a:hover { text-decoration: none; }
 	min-height:100%;
 	
 	h2 { 
-		color: #b1aaa4; 
 		.first-letter-larger; 
 	}
 	h4 { 
@@ -88,9 +88,15 @@ a:hover { text-decoration: none; }
 		font-size: 16px; 
 		.first-letter-larger; 
 		border-bottom: 1px solid #ccc;
+		line-height: 0.8;
 		p { display: inline-block; .first-letter-larger; margin: 0; }
 	}
-	
+	p {
+		text-align:justify;
+		text-justify:inter-word;
+		line-height: 24px;
+	}
+
 	.consultation-container {
 		position: relative;
 		background-color: #d8d4d1;
@@ -111,6 +117,13 @@ a:hover { text-decoration: none; }
 			background-color: #fff;
 			border-radius: 100%;
 			padding: 12px;
+		}
+		
+		.testimonials {
+			.row { margin-bottom: 40px; }
+		
+			.quote { width: 48px; }
+			.star { width: 20px; }
 		}
 	}
 	
